gui/src/pages/instance/InstanceList.css
#instance-list {
	width: 90%;
}

#instance-list-top {
	display: grid;
	grid-template-columns: minmax(0, 1fr) minmax(0, 1.5fr) minmax(0, 1fr);
}

.instance-list-section-container {
	width: 100%;
	margin-bottom: 2.6rem;
	gap: 0;
}

.instance-list-section-header {
	/* margin-left: 1.8rem; */
	justify-content: flex-start;
	width: 100%;
}

.instance-list-section-header > svg {
	margin-bottom: 0.05rem;
	margin-left: 1.3rem;
}

.instance-list-section-header > h2 {
	line-height: 0;
	font-size: 1.2rem;
}

.instance-list-section {
	display: grid;
	grid-template-columns: repeat(4, minmax(0, 1fr));
	width: 100%;
}

.instance-list-item {
	background-color: var(--bg2);
	margin: 0.5rem;
	padding: 0.2rem;
	height: 4.8rem;
	text-align: center;
	box-sizing: border-box;
	display: flex;
	flex-direction: row;
	align-items: center;
	cursor: pointer;
	border-radius: var(--round2);
	gap: 0.5rem;
	position: relative;
	border: var(--border) solid var(--bg3);
	border-top-color: var(--bg4);
	border-left-color: var(--bg4);

	transition: background-color 0.15s, border-color 0.25s,
		transform var(--bubble);
}

.instance-list-item-details {
	align-items: flex-start;
	gap: 0;
	overflow-x: auto;
	overflow-y: hidden;
}

.instance-list-item-upper-details {
	max-width: 10rem;
	text-wrap: nowrap;
	overflow-x: hidden;
}

.instance-list-item-lower-details {
	color: var(--fg3);
	gap: 0.7rem;
	font-size: 0.9rem;
}

.instance-list-item-plugin {
	color: var(--fg);
	margin-right: -0.3rem;
	transform: translateY(-1px);
}

.instance-list-item:hover {
	background-color: var(--bg3);
	border-right-color: var(--bg4);
	border-bottom-color: var(--bg4);
}

.instance-list-item.instance.selected {
	border-color: var(--instance);
	color: var(--instance);
	background-color: var(--instancebg);
}

.instance-list-item.template.selected {
	border-color: var(--template);
	color: var(--template);
	background-color: var(--templatebg);
}

.instance-list-icon {
	width: 2.75rem;
	margin-left: 0.5rem;
}

.instance-list-pin {
	position: absolute;
	right: 0.8rem;
}

